# ai_classify

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example
.github/: README.md
.github/workflows/: docs.yml  rust.yml
src/: api.rs  lib.rs  llm.rs  main.rs  storage.rs
src/api/: middleware.rs  mod.rs  tests.rs
src/classifier/: chatgpt.rs  chatgpt_test.rs  claude.rs  claude_test.rs  mod.rs
src/config/: mod.rs
src/llm/: mod.rs  openai.rs
src/storage/: integration_test.rs  mod.rs  redis.rs
src/storage/content/: filesystem.rs  mod.rs  redis.rs  redis_test.rs  s3.rs  s3_test.rs
src/storage/tag/: mod.rs  redis.rs  redis_test.rs
