[package]
name = "classify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.130", features = ["derive"] }
openai_api_rust = "0.1.9"
config = { version = "0.14.0", features = ["toml"] }
redis = "0.29.0"
anyhow = "1.0.96"
